--- a/freshy-bar-project/index.html
+++ b/freshy-bar-project/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Freshy Bar</title>
+        <link rel="preload" href="./fonts/mulish-v12-cyrillic_latin-600.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="./fonts/mulish-v12-cyrillic_latin-900.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="./fonts/mulish-v12-cyrillic_latin-regular.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+        <link rel="stylesheet" href="./css/normalize.css">
         <link rel="stylesheet" href="./css/style.css" />
         <script src="./js/script.js"></script>
     </head>
