Adding API to the Site Freshy Bar - Day#3

--- a/freshy-bar-project/index.html
+++ b/freshy-bar-project/index.html
@@ -10,7 +10,7 @@
       <link rel="icon" type="image/svg+xml" href="favicon.svg" />
       <link rel="stylesheet" href="./css/normalize.css">
       <link rel="stylesheet" href="./css/style.css" />
-      <script src="./js/script.js"></script>
+      <script src="./js/script.js" defer></script>
    </head>
    <body>
       <header class="header">
@@ -67,7 +67,7 @@
                         </div>
                      </article>
                   </li>
-                  <li class="goods__item">
+ <!--                  <li class="goods__item">
                      <article class="goods__card cocktail">
                         <img src="./img/strawberry.png" alt=" cocktail pic" class="cocktail__img">
                         <div class="cocktail__content">
@@ -164,7 +164,7 @@
                            <button class="btn cocktail__btn">Добавить</button>
                         </div>
                      </article>
-                  </li>
+                  </li> -->
                </ul>
             </div>
          </section>
