Added Styles for Checkbox to the Site Freshy Bar - Day#4

--- a/freshy-bar-project/index.html
+++ b/freshy-bar-project/index.html
@@ -194,7 +194,7 @@
             <!-- /*само модальное окно- отвечает за внутренние свойства и оформление*/ -->
             <div class="order">
                <h2 class="order__title">Корзина<sup 
-                  class="text-red order__count">(2)</sup>
+                  class="text__red order__count">(2)</sup>
                </h2>
 
                <ul class="order__list">
@@ -235,7 +235,7 @@
 
                   <div class="order__price">
                      <p class="order__price-title">Итого</p>
-                     <p class="order__total-price">950 ₽</p>
+                     <p class="order__total-price text__red">950 ₽</p>
                   </div>
 
                   <form class="order__form">
