Added Form with Custom Cocktail to the Site Freshy Bar Day#5- part 2

--- a/freshy-bar-project/index.html
+++ b/freshy-bar-project/index.html
@@ -349,6 +349,8 @@
                         <button class="btn make__add-btn" type="submit">Добавить</button>
 
                         <div class="make__total">
+                            <!-- value значения никакого смысла сейчас не несут , они будут заполняться из js -->
+                           <input class="make__input make__input-price" type="hidden" name="price" value="150">
                            <p class="make__total-price text__red">340 ₽</p>
                            <p class="make__total-size">300мл</p>
                         </div>
